// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders renders correctly when lines are react nodes 1`] = `
<div
  className="event-area"
>
  <div
    className="event-date-container"
  >
    <p>
      May.
      <br />
      10
    </p>
  </div>
  <div
    className="event-title"
  >
    test title
  </div>
  <div
    className="event-lines"
  >
    <div
      className="event-line"
    >
      <span>
        Line 1T
      </span>
    </div>
    <div
      className="event-line"
    >
      <span>
        Line 2T
      </span>
    </div>
  </div>
</div>
`;

exports[`renders renders correctly when lines are strings 1`] = `
<div
  className="event-area"
>
  <div
    className="event-date-container"
  >
    <p>
      May.
      <br />
      10
    </p>
  </div>
  <div
    className="event-title"
  >
    test title
  </div>
  <div
    className="event-lines"
  >
    <div
      className="event-line"
    >
      line 1
    </div>
    <div
      className="event-line"
    >
      line 2
    </div>
  </div>
</div>
`;
